--- a/C/CMakeLists.txt
+++ b/C/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.27)
-project(HW1_C C)
+project(C C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_library(HW1_C STATIC
-        kmeans.c)
+add_executable(C kmeans.c)
